@@ -12,6 +12,7 @@ ver 0.21 (not yet released)
   - new tags "OriginalDate", "MUSICBRAINZ_WORKID"
 * decoder
   - gme: try loading m3u sidecar files
+  - hybrid_dsd: new decoder plugin
   - pcm: support audio/L24 (RFC 3190)
 * resampler
   - soxr: flush resampler at end of song
